# formigueiro

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.toml  flake.nix
.github/workflows/: auto-release.yml
formigueiro/: Cargo.toml
formigueiro-cargo/: Cargo.toml
formigueiro-cargo/src/: lib.rs
formigueiro-config/: Cargo.toml
formigueiro-config/src/: lib.rs
formigueiro-core/: Cargo.toml
formigueiro-core/src/: apply.rs  catalog.rs  colony.rs  constrain.rs  converge.rs  daemon.rs  lib.rs  pace.rs  plan_store.rs  swarm.rs
formigueiro-flake/: Cargo.toml
formigueiro-flake/src/: lib.rs
formigueiro-image/: Cargo.toml
formigueiro-image/src/: lib.rs
formigueiro/src/: main.rs  store.rs
outorga/: Cargo.toml
outorga/src/: lib.rs
