[workspace]
resolver = "3"
members = ["outorga", "formigueiro-core", "formigueiro-flake", "formigueiro-config", "formigueiro"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/formigueiro"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
