[workspace]
resolver = "3"
members = ["outorga", "formigueiro-core", "formigueiro-flake", "formigueiro-image", "formigueiro-cargo", "formigueiro-config", "formigueiro"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["pleme-io"]
repository = "https://github.com/pleme-io/formigueiro"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates carry a version alongside the path so `cargo package`
# can publish them to crates.io (a path-only dep is unpublishable).
outorga = { path = "outorga", version = "0.1.0" }
formigueiro-core = { path = "formigueiro-core", version = "0.1.0" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
