[package]
name = "formigueiro-core"
version.workspace = true
description = "The pure algebra of the fleet update swarm: update signals, the UpdateKind trait + its shadow (compute-what-would-change without writing), the mockable UpdateEnv side-effect boundary, and the formiga tick that composes a shadow outcome with an outorga promotion decision into one typed TickOutcome."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
outorga = { workspace = true }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
