[package]
name = "outorga"
version.workspace = true
description = "The generic progressive-authority promotion FSM: shadow → confirm → effect, with a fleet freeze. A k8s-free lift of breathe's promotion lifecycle; consumed by formigueiro (fleet updates) and breathe (resource homeostasis)."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
